Revision history for Perl extension PPI

1.211_01 Sun 21 Feb 2010
	Summary:
	- Experimentation support and some fixes

	Details:
	- Upgraded to Module::Install 0.93
	- Added support for $PPI::Lexer::X_TOKENIZER, so that alternate
	  experimentatal tokenizers can be swapped in for testing.
	- Added an extra 14_charsets.t case to validate we handle byte
	  order marks properly.
	- Moved author tests from t to xt to reduce spurious test failures
	  in CPAN Testers, when the testing modules change across versions
	- Fixed #26082: scalar { %x } is misparsed
	- Fixed #26591: VMS patch for PPI 1.118
	- Fixed #44862: PPI cannot parse "package Foo::100;" correctly.

1.210 Mon 15 Feb 2010
	Summary:
	- Packaging fixes

	Details:
	- No functional changes
	- Upgrading to Module::Install 0.93
	- Added missing test_requires dependency for Class::Inspector

1.209 Sat  6 Feb 2010
	Summary:
	- Small optimisation release

	Details:
	- No functional changes
	- Upgrading to Module::Install 0.92
	- Moved the Test::ClassAPI test to only run during RELEASE_TESTING
	  to reduce the dependency load (and occasionally Test::ClassAPI seems
	  to FAIL on CPAN Testers.

1.208 Thu 14 Jan 2010
	Summary:
	- THIS IS THE 100TH RELEASE OF PPI!
	- Fixes some tiny issues, otherwise unchanged from 1.207_01

	Details:
	- Don't assign '' to $^W, it generates a warning on Gentoo
	- Added missing PPI::Token::Regexp fix to Changes file
	- Updating Copyright to the new year (yet again)

1.207_01 Thu 10 Dec 2009
	Summary:
	- This is a general bug fix and accuracy release

	Details:
	- Fixed #50309: literal() wrong result on "qw (a b c)"
	- PPI::Dumper no longer causes Elements to flush location data.
	  Also it no longer disables location information for non-Documents.
	- +{ package => 1 } doesn't create a PPI::Statement::Package
	- PPI::Token::Regexp and PPI::Token::QuoteLike::Regexp how have methods
	  for getting at the various components (delimiters, modifiers, match &
	  substitution strings).
